--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="he">
 <head>
   <meta charset="UTF-8">
-  <title>דירוג סרטים — ברור ושחרר</title>
+  <title>דירוג סרטים — גרור ושחרר</title>
   <style>
     body {
       background: #111;
